# ffConvert

./: .gitignore  CMakeLists.txt  README.md  ffConvert.cbp  ffConvert.depend  ffConvert.layout
resource/: ffConvert.desktop
src/: myApp.cpp  myFrame.cpp  myFrame.h
